--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,9 +6,31 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n«Dijo Dios: \"Haya luz\", y hubo luz.»\nGénesis 1,3</string>
   <string name="help_text">Pulse el botón de MENÚ para acciones\n\nVaya al capítulo siguiente o anterior usando la track-ball, el D-pad o desplazando la pantalla con su dedo</string>
+  <string name="help_nav_title">Navegación</string>
+  <string name="help_nav_text">Vaya al capítulo siguiente o anterior desplazando la pantalla con su dedo.
+Toque el texto de la Biblia una vez para cambiar a modo pantalla completa. Las ventanas de  la Biblia tienen un botón de menú en la esquina superior derecha,
+y puede acceder al menú de ventana haciendo una pulsación larga sobre ellas.</string>
+  <string name="help_speech_title">Voz</string>
+  <string name="help_speech_text">Pulse \"Con voz\" para acceder a un diálogo para comenzar o terminar la lectura</string>
+  <string name="help_mynote_title">Mi nota</string>
+  <string name="help_mynote_text">Se pueden agregar notas a través del elemento de menú \"Mi nota\" en el menú de contexto del versículo.
+La lista de las notas existentes está accesible desde el menú principal.</string>
+  <string name="help_bookmarks_title">Marcadores</string>
+  <string name="help_bookmarks_text">Se pueden agregar marcadores a través del menú contextual del versículo.
+El gestor de marcadores está accesible desde el menú principal.
+El menú contextual del gestor de marcadores permite agrupar los marcadores usando etiquetas.</string>
+  <string name="help_search_title">Búsqueda</string>
+  <string name="help_search_text">La búsqueda de texto puede incluir caracteres especiales como *, ?, AND, OR, NOT
+(vea \"Apache Lucene - Query Parser Syntax\" para más detalles)</string>
+  <string name="help_contextmenus_title">Menús contextuales</string>
+  <string name="help_contextmenus_text">
+Realice una presión larga en la vista de la Biblia para abrir el menú contextual para acciones que afectan al versículo actual.
+Realice presión larga en un documento en el selector de documentos para eliminarlo o ver información.
+Realice presión larga en el botón \"Atrás\" para acceder el listado del historial.</string>
   <string name="version_text">Versión %s</string>
   <string name="no_sdcard_error">Por favor inserte una tarjeta SD e inicie And Bible nuevamente.</string>
   <!--Main menu-->
+  <string name="menu">Menú</string>
   <string name="chooseBook">Documento</string>
   <string name="selectPassage">Pasaje</string>
   <string name="search">Encuentra</string>
@@ -18,6 +40,8 @@
   <string name="help">Ayuda</string>
   <string name="verse">Verso</string>
   <string name="administration">Administración</string>
+  <string name="rate_application">Valorar y comentar en Google Play</string>
+  <string name="chooce_document">Elegir documento</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Elige Libro</string>
   <string name="choosePassageChapterName">Elige Capítulo</string>
@@ -27,11 +51,13 @@
   <!--Search-->
   <string name="search_index">Indice de búsqueda</string>
   <string name="index_creation_required">Se requiere un índice para buscar.\n\nLos índices se pueden descargar de internet o crearse localmente.\n\nDescargarlos es mucho más rápido y los índices descargados tienen más características de búsqueda.\n\nSe necesita una conexión a internet para descargar índices.\n</string>
+  <string name="search_index_unavailable">Desgraciadamente la creación de índices solo está disponible en Android 5.0 (Lollipop) o posterior.</string>
   <string name="indexing_wait_msg">Cuando la indexación se haya completado, se redireccionará a la pantalla de búsqueda.</string>
   <string name="index">Indice</string>
   <string name="index_download">Descarga</string>
   <string name="index_not_available_for_download">Este indice no está disponible para descargar</string>
   <string name="index_create">Crear</string>
+  <string name="rebuild_index">Reconstruir el índice</string>
   <!--Tasks-->
   <string name="progress_status">Progreso</string>
   <string name="task_kill_warning">Estas tareas de larga duración pueden interrumpirse si cambia a otra aplicación antes de que terminen.</string>
@@ -102,6 +128,7 @@
   <string name="prefs_request_sdcard_permission_title">Existen documentos instalados manualmente</string>
   <string name="prefs_request_sdcard_permission_summary">Habilitar el uso de documentos instalados manualmente desde la carpeta jsword en la tarjeta SD</string>
   <!--Window-->
+  <string name="new_window">Nueva ventana</string>
   <string name="window">Ventana</string>
   <string name="windowClose">Cerrar</string>
   <string name="windowMaximise">Maximizar</string>
@@ -139,6 +166,7 @@
   <string name="document_not_installed">Por favor descarga \'%s\'</string>
   <!--Install zip file-->
   <string name="install_zip">Cargar documento desde zip</string>
+  <string name="install_zip_module">Instalar módulo de Biblia</string>
   <string name="install_zip_successfull">El módulo se ha instalado correctamente</string>
   <string name="extracting_zip_file">Extrayendo Zip...</string>
   <string name="checking_zip_file">Comprobando el archivo...</string>
@@ -225,17 +253,90 @@
   <string name="speak_queue">Cola</string>
   <string name="speak_repeat">Repetir</string>
   <!--Speak - Bible-->
+  <string name="speak_speed_title">Velocidad de locución</string>
+  <string name="speak_and_play_earcons_title">Voz y reproducción de sonidos para</string>
+  <string name="playback_settings_title">Ajustes de reproducción</string>
+  <string name="speak_settings_title">Ajustes generales de locución</string>
+  <string name="speak_bookmarking_settings_title">Ajustes de marcadores</string>
+  <string name="speak_bookmarks_menu_title">Voz desde marcador</string>
+  <string name="speak_advanced_settings">Ajustes avanzados</string>
+  <string name="speak_sleep_timer_title">Temporizador</string>
+  <string name="speak_no_books_available">No hay libros disponibles para voz</string>
+  <string name="repeat_passage">Repetir pasaje</string>
+  <string name="set_repeat_passage_range">Establecer el rango de repetición de pasaje</string>
+  <string name="speak_beginning_of_passage">Elegir inicio de pasaje</string>
+  <string name="speak_ending_of_passage">Elegir finalización de pasaje</string>
+  <string name="speak_verse_range_to_repeat">Elegir rango de versículos a repetir</string>
+  <string name="speak_ending_verse_must_be_later">El versículo de finalización debe estar más adelante del versículo de inicio</string>
+  <string name="conf_speak_synchronize">El texto sigue la voz</string>
+  <string name="conf_speak_auto_bookmark">Marcar automáticamente</string>
+  <string name="conf_save_playback_settings_to_bookmarks">Guardar los ajustes de reproducción para los marcadores</string>
+  <string name="conf_replace_divinename">Reemplazar el nombre divino con Yahvé</string>
+  <string name="conf_change_chapter">Cambios de capítulo</string>
+  <string name="conf_change_title">Títulos</string>
+  <string name="conf_speak_footnotes">Notas al pie</string>
+  <string name="conf_speak_sleep_timer">Establecer temporizador</string>
+  <string name="conf_speak_multitranslation">Voz desde todas las ventanas visibles</string>
+  <string name="sleep_timer_title">Tiempo de apagado en minutos</string>
+  <string name="sleep_timer_set">Establecer temporizador. Temporizador establecido a %d minutos</string>
+  <string name="sleep_timer_started">Temporizador iniciado, %d minutos</string>
+  <string name="sleep_timer_active_at">Temporizador: quedan %s minutos.</string>
+  <string name="speak_next">Siguiente</string>
+  <string name="speak_previous">Anterior</string>
+  <string name="widget_toggle_sleep_timer">Apagar o encender temporizador</string>
+  <string name="widget_bookmark_helptext">Aquí aparecerán los botones de atajo a marcadores de voz.</string>
+  <string name="speak_status_stopped">parado</string>
+  <string name="speak_autobookmarking_disabled">¡Marcadores automáticos deshabilitados!</string>
+  <string name="system_speak_settings">Abrir los ajustes del sistema de Texto a Voz</string>
+  <string name="speak_bookmark_help">Ayuda de marcadores de voz</string>
+  <string name="speak_help_auto_bookmark">
+Un marcador de voz se agregará automáticamente cuando la voz está pausada o parada.
+Los marcadores generados automáticamente se etiquetan con la etiqueta especial de \"Voz\".
+Si comienza en un marcador de voz, el marcador se moverá al versículo que pare
+o pause la próxima vez. Solo se moverán las etiquetas de voz, cualquier otra etiqueta se dejará tal cual.</string>
+  <string name="speak_help_playback_settings">
+Los ajustes especiales de reproducción (dentro de \"Ajustes de reproducción\" en la pantalla de Voz)
+se guardan para los marcadores de voz cuando se selecciona esta opción.
+Cuando reinicie el discurso desde un marcador de voz, se cargan desde marcadores
+los ajustes de reproducción guardados.</string>
+  <string name="speak_help_playback_settings_example">
+Por ejemplo, si está escuchando Génesis y Romanos
+y desea escuchar Génesis con voz rápida sin notificaciones de cambio de capítulo,
+pero Romanos más despacio con sonidos  en cambios de capítulos, entonces
+puede establecer distintos ajustes de reproducción para esos libros,
+cuando los ajustes se guardan en los correspondientes marcadores.</string>
   <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
          if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_original">
+    <item>Señor</item>
+    <item>Dios</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
   <!--List of (max 5) words that we will replace those words listed in divinename_original.
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_replace">
+    <item>Yahvé</item>
+    <item>Yahvé</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
+  <string name="speak_book_changed">Cambio de libro.</string>
+  <string name="speak_chapter_changed">Capítulo</string>
+  <string name="speak_first">Primero</string>
+  <string name="speak_second">Segundo</string>
+  <string name="speak_third">Tercero</string>
+  <string name="speak_fourth">Cuarto</string>
+  <string name="speak_fifth">Quinto</string>
   <!--User Notes-->
   <string name="mynotes">Mis Notas</string>
   <string name="mynote">Mi Nota</string>
@@ -243,6 +344,7 @@
   <string name="mynote_view_edit">Mi Nota</string>
   <string name="mynote_saved">Nota guardada</string>
   <!--Backup and restore-->
+  <string name="backup_and_restore">Copia de seguridad y restauración</string>
   <string name="backup">Copia de seguridad</string>
   <string name="backup_success">Se han guardado Mis Notas y Marcadores en %s en la tarjeta SD</string>
   <string name="restore">Resturar</string>
@@ -277,6 +379,7 @@
   <string name="new_item">Nuevo</string>
   <string name="close">Cerrar</string>
   <string name="edit">Editar</string>
+  <string name="watch_tutorial_video">Ver vídeo tutorial (Inglés)</string>
   <!--Errors-->
   <string name="report_error">Enviar informe</string>
   <string name="error_occurred">A ocurrido un error.</string>
@@ -284,6 +387,9 @@
   <string name="error_page_too_large">La página es muy grande como para ser cargada</string>
   <string name="error_key_not_in_document">No encontrado en el documento</string>
   <string name="empty_list">No hay ítems para mostrar</string>
+  <string name="add_widget">Agregar widget</string>
   <!--Notifications-->
+  <string name="download_documents">Descargando documentos</string>
+  <string name="notification_channel_tts_status">Texto a voz</string>
   <string name="notification_channel_progress_status">Notificación de estado de progreso para descarga de documentos etc.</string>
 </resources>
