--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="rdg_plan_day">Day %s</string>
     <string name="rdg_plan_set_start_jan1">Start Jan 1</string>
     <string name="done">Done</string>
+    <string name="next_day">Next Day</string>
     <string name="reset">Reset</string>
     <!-- string name="rdg_plan_m1gospels">Through the Gospels in a month</string -->
     
