--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -410,4 +410,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Notifications -->
     <string name="notification_channel_tts_status">Text to speech</string>
     <string name="notification_channel_progress_status">Progress status notification for document downloads etc.</string>
+    <string name="text_formatting">Text formatting</string>
+    <string name="text_options">Text options</string>
+    <string name="auto_fullscreen">Auto-fullscreen</string>
+    <string name="bible_view_behavior">Bible view behavior</string>
+    <string name="switch_split_mode">Switch split mode</string>
+    <string name="vertical_split_mode">Vertical split mode</string>
 </resources>
