--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -415,5 +415,5 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="auto_fullscreen">Fullscreen by scrolling</string>
     <string name="bible_view_behavior">Bible view behavior</string>
     <string name="switch_split_mode">Switch split mode</string>
-    <string name="reversed_split_mode">Vertical split</string>
+    <string name="reversed_split_mode">Reversed split mode</string>
 </resources>
