--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -416,4 +416,6 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="bible_view_behavior">Bible view behavior</string>
     <string name="switch_split_mode">Switch split mode</string>
     <string name="reversed_split_mode">Reversed split mode</string>
+    <string name="prefs_auto_night_mode_title">Automatic night mode</string>
+    <string name="prefs_auto_night_mode_summary">Switch to night mode automatically by sensor</string>
 </resources>
