--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
 
     <!-- Startup & Help -->
     <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
-    <string name="help_text">Press the MENU button for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
+    <string name="help_text">Press the MENU button for actions\n\n
+        Go to the next or previous chapter by using the track-ball,
+        D-pad or swiping the screen with your finger</string>
 
     <string name="help_nav_title">Navigation</string>
     <string name="help_nav_text">Go to the next or previous chapter by swiping the screen with your finger.
-        Tap bible text once to toggle full screen mode. Bible windows have menu button on the top-right corner,
+        Double-tap bible text to toggle full screen mode. Bible windows have menu button on the top-right corner,
         and you can access window menu long pressing them.
     </string>
 
